doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Nacho\Desktop\bluej proyectos\practica\lib\lib\JGameGrid.jar;C:\Users\Nacho\Desktop\bluej proyectos\practica\lib\lib\RobotSim.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Nacho\Desktop\practica2
-d
C:\Users\Nacho\Desktop\practica2\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Nacho\Desktop\practica2\pmyoo\AlmacenGestor.java
<---- end of javadoc command ---->
Loading source file C:\Users\Nacho\Desktop\practica2\pmyoo\AlmacenGestor.java...
C:\Users\Nacho\Desktop\practica2\pmyoo\AlmacenGestor.java:32: error: <identifier> expected
        Stock.recuperarPrimeraCaja(pColor).(0);
                                           ^
1 error
